--- a/arescrypt/Display.resx
+++ b/arescrypt/Display.resx
@@ -1949,7 +1949,10 @@ updates and removes this software automaticaly. It will not be able to recover y
         3KrMfnP1oooKiVrw/P8AhRRRWhJ//9k=
 </value>
   </data>
+  <metadata name="RiseTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>104, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>27</value>
   </metadata>
 </root>
